--- a/src/composer.json
+++ b/src/composer.json
@@ -12,11 +12,12 @@
         "aymanalhattami/filament-slim-scrollbar": "*",
         "bezhansalleh/filament-shield": "*",
         "diogogpinto/filament-auth-ui-enhancer": "*",
-        "filament/filament": "^3.0",
+        "filament/filament": "^3.3",
         "hasnayeen/themes": "*",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "joshembling/image-optimizer": "^1.6",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "njxqlus/filament-progressbar": "*",
         "z3d0x/filament-logger": "^0.8.0"
